--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+* {
+	box-sizing: border-box;
+}
+
+html , body {
+	overflow-x: hidden;
+}
